warning and logging cleanup